Correcting Footer Visibility

--- a/project/tampa-bay-beaches/css/style.css
+++ b/project/tampa-bay-beaches/css/style.css
@@ -224,17 +224,17 @@ header nav ul li a:active {
 /* ---------- footer ---------- */
 
 footer { /* Maybe Add Texture/Patter */
-	background: #2d231b;
+	background: rgba(83, 69, 50, 1);
 	padding: 20px;
 	font-size: 11px;
-	color: #473d35;
+	color: #fff;
 	border-top: 1px solid #19130f;
 
-	-moz-box-shadow: inset 0px 2px 5px #241c16;
-	-webkit-box-shadow: inset 0px 2px 5px #241c16;
-	box-shadow: inset 0px 2px 5px #241c16;
-
-	text-shadow: 0 -1px 0 #000000;
+	-moz-box-shadow: inset 0px 2px 3px rgba(0,0,0,.2);
+	-webkit-box-shadow: inset 0px 2px 3px rgba(0,0,0,.2);
+	box-shadow: inset 0px 2px 3px rgba(0,0,0,.2);
+	
+	text-shadow: 0px -1px 0px #000;
 }
 
 footer nav ul {
